# glorri

./: .dir-locals.el  .gitignore  Makefile.am  README.md  configure.ac  glorri.scm  guix.scm  pre-inst-env.in
.guix/modules/: glorri-package.scm
doc/: glorri.texi  local.mk
glorri/: hello.scm
scripts/: glorri.in
